# precommit-todo-check

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  makefile  pyproject.toml  setup.py  todo_check.py
pre_commit_hook/: test_regex.py  todo_check.py
pre_commit_hook.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_display.py  test_regex.py
