[tool.poetry]
name = "precommit-todo-check"
version = "0.1.0"
description = ""
authors = ["Chad Upjohn <chad.upjohn@stratasan.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
isort = "^5.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
