# Example configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 88
target-version = ['py37']
exclude = '''
/(
  # Directories
    \.eggs
  | \.git
  | \.vscode
  | \.tox
  | \.venv
  | \.ropeproject
  | build
  | venv
  | .*egg-info
)/
'''

[tool.interrogate]
fail-under = 95
ignore-regex = ["^(?!test_).+"]
ignore-module = true
ignore-init-module = true
quiet = false
verbose = 1

[tool.poetry]
name = "precommit-todo-check"
version = "0.1.0"
description = ""
authors = ["Chad Upjohn <chad.upjohn@stratasan.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
isort = "^5.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
